resources/assets/styles/layouts/_subsite-menu.scss
.aside-subsite-menu.preload {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
  margin-top: -9px;

  #utk-subsite-menu {
    width: 303px;
    transition: $transition-all;

    .subsite-menu-wrap {
      margin-left: -$golden-ratio-2;
      width: calc(100% + #{$golden-ratio-2});
    }

    @include respond(xs, sm) {
      position: fixed !important;
      width: 100% !important;
      top: 129px !important;
      left: 0 !important;
      background-color: $gray-1 !important;
      height: calc(100% - 129px) !important;
      display: none;
      overflow-y: scroll;
      z-index: 99;

      @include respond(xs) {
        top: 113px !important;
        height: calc(100% - 113px) !important;
      }

      .subsite-menu-wrap {
        background-color: $white;
        padding-bottom: 0;
        height: 100%;
        margin-left: 0;
        width: 100%;

        @include respond(xs) {
          height: calc(100% - 113px) !important;
        }

        * {
          min-height: 0;
          min-width: 0;
        }

        li a .subsite-menu--item--label,
        li a:visited .subsite-menu--item--label {
          padding: 14px 29px 13px;

          @include respond(xs) {
            padding: 14px 18px 13px;
          }
        }
      }

      .subsite-call-to-actions {
        margin-top: 0 !important;
        padding: 0 !important;
        z-index: 100;
        background: $gray-1 !important;
        background-color: $gray-1 !important;
        width: 100%;

        > a.subsite-call-to-actions--item {
          margin-top: 6px;
          margin-bottom: 0;

          @include respond(sm) {
            padding-left: $golden-ratio-3;
          }
        }
      }

      .subsite-menu-help {
        position: fixed;
        width: 100%;
        z-index: 101;
        height: 35px;
        opacity: 1;
        transition: $transition-opacity;
        text-shadow: 0 0 11px $gray-0;
        justify-content: center;
        align-items: flex-end;
        align-content: flex-end;
        backdrop-filter: blur(11px);
        -webkit-backdrop-filter: blur(11px);
        display: none;

        &::before {
          width: 15px;
          height: 15px;
          border-radius: 15px;
          position: fixed;
          margin-top: -30px;
          font-family: fontello, monospace;
          font-style: normal;
          font-weight: 400;
          speak: none;
          display: inline-block;
          text-decoration: inherit;
          text-align: center;
          font-variant: normal;
          text-transform: none;
          line-height: 15px;
          -webkit-font-smoothing: antialiased;
          -moz-osx-font-smoothing: grayscale;
          transition: $transition-all-fast;
          content: '\f107';
          color: $white;
          background-color: $orange;
          box-shadow: $box-shadow-float;
        }

        &#subsite-menu-help {
          opacity: 1;
          display: none;

          &.subsite-menu-help--scrolled {
            opacity: 0;
          }
        }

        &#subsite-menu-top {
          opacity: 0;
          cursor: pointer;
          color: $globe;
          display: none;

          &.subsite-menu-help--scrolled {
            opacity: 1;
          }

          &::before {
            content: '\f106';
            background-color: $globe;
          }
        }
      }
    }
  }
}

body.subsite-menu-mobile-expand {
  overflow: hidden;

  .utk-hours-section {
    display: none;
  }

  .aside-subsite-menu.preload {
    #utk-subsite-menu {
      display: block;
    }
  }

  .page-header--current-page-expand {
    display: none !important;
  }

  .page-header--current-page-close {
    display: flex !important;

    .icon-left-open {
      display: inline-block !important;
      color: $white !important;

      @include respond(xs, sm) {
        display: inline-block !important;
      }
    }
  }
}

body.subsite-menu-mobile-expand.header-scroll-down:not(.header-show) {
  .aside-subsite-menu.preload {
    #utk-subsite-menu {
      @include respond(xs, sm) {
        height: calc(100% - 94px) !important;

        .subsite-menu-wrap {
          height: calc(100% - 94px) !important;
        }
      }
    }
  }
}

